# voicetastic-web

./: .gitignore  Cargo.toml  Justfile  README.md  index.html  style.css
.cargo/: config.toml
.github/workflows/: auto-bump.yml  deploy.yml
js/: app.js  chat.js  events.js  settings.js  state.js  ui.js
src/: amrnb.rs  amrnb_shim.js  codec.rs  events.rs  lib.rs  serial.rs  settings.rs  util.rs  voice.rs
