[package]
name = "voicetastic-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
description = "Browser (wasm) client for Voicetastic: reuses voicetastic-core over Web Serial."

[lib]
# wasm-bindgen needs a cdylib to emit a loadable .wasm module.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Reuse the desktop engine's sans-IO protocol core: decode/build/state
# (protocol), voice framing + reassembly (voice::build_message / VoiceAssembler),
# pacing (voice::tx_policy), and the Codec2 codec (codec::codec2_encode/decode,
# via the wasm-safe `codec2` feature — no Opus/C deps). No native transports/
# tokio (default-features off). Path dep for now; switch to a git dep later.
voicetastic-core = { path = "../voicetastic-desktop/crates/voicetastic-core", default-features = false, features = ["codec2", "denoise", "opus-decode"] }
# Vendored opencore-amr-nb built to a standalone wasm by emscripten — the
# browser's AMR-NB encode/decode path. Path dep so the build artifact lives
# alongside the other core crates; the wasm bytes are baked into our wasm
# via include_bytes! and re-instantiated at runtime through a JS shim.
opencore-amrnb-src = { path = "../voicetastic-desktop/crates/opencore-amrnb-src" }

# Same prost as core (0.14) so the generated `proto` types share one trait impl.
prost = "0.14"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
# Settings IO: pass typed structs between Rust and JS for the snapshot
# accessor + per-section write methods.
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# console.log + the (still-unstable) Web Serial bindings.
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Navigator",
  "Window",
  "Serial",
  "SerialPort",
  "SerialOptions",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "WritableStream",
  "WritableStreamDefaultWriter",
]
