[package]
name = "voicetastic-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
description = "Browser (wasm) client for Voicetastic: reuses voicetastic-core over Web Serial."

[lib]
# wasm-bindgen needs a cdylib to emit a loadable .wasm module.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Reuse the desktop engine's sans-IO protocol core: decode/build/state
# (protocol), voice framing + reassembly (voice::build_message / VoiceAssembler),
# pacing (voice::tx_policy), and the Codec2 codec (codec::codec2_encode/decode,
# via the wasm-safe `codec2` feature — no Opus/C deps). No native transports/
# tokio (default-features off). Path dep for now; switch to a git dep later.
voicetastic-core = { path = "../voicetastic-desktop/crates/voicetastic-core", default-features = false, features = ["codec2", "denoise", "opus-wasm", "amrnb-wasm"] }

# Same prost as core (0.14) so the generated `proto` types share one trait impl.
prost = "0.14"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
# getrandom 0.2 is dragged in transitively by core's x25519-dalek (rand_core
# 0.6). It uses a `js` Cargo feature (not the `getrandom_backend` cfg that 0.3+
# uses), so we have to enable it here as a wasm32-only direct dep — cargo
# unifies this with the transitive to give it the browser RNG backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
# `Instant` that works on wasm32 (drop-in for std on native). Used to feed
# core's `VoiceTx` sans-IO state machine — same crate core itself uses, so
# both sides share one clock type.
web-time = "1"
# Settings IO: pass typed structs between Rust and JS for the snapshot
# accessor + per-section write methods.
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# console.log + the (still-unstable) Web Serial bindings.
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Navigator",
  "Window",
  "Serial",
  "SerialPort",
  "SerialOptions",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "WritableStream",
  "WritableStreamDefaultWriter",
]
